# toodue

./: .dockerignore  .env.prod.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.prod.yml  docker-compose.yml
backend/: Cargo.toml  Dockerfile.dev
backend/src/: auth.rs  db.rs  error.rs  events.rs  gcal.rs  ics.rs  main.rs  models.rs  schema.postgres.sql  schema.sql
backend/src/routes/: ai.rs  api_keys.rs  attachments.rs  comments.rs  import.rs  mod.rs  projects.rs  tasks.rs  templates.rs
docs/: api-mcp.md  index.html  openapi.yaml
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/scripts/: gen-icons.mjs
frontend/src/: App.svelte  app.css  main.js
frontend/src/lib/: api.js  apiKeys.js  apiKeys.test.js  authHomepage.test.js  bulkShare.js  bulkShare.test.js  datePicker.js  datePicker.test.js  dates.js  offlineStore.js  offlineStore.test.js  pullRefresh.js  pullRefresh.test.js  quickAdd.js  quickAdd.test.js  recurrence.js  recurrence.test.js  state.svelte.js  templates.js  templates.test.js
frontend/src/lib/components/: Auth.svelte  BottomNav.svelte  BrandLogo.svelte  ColorSchemePicker.svelte  DatePicker.svelte  ProjectDialog.svelte  QuickAdd.svelte  Settings.svelte  Sidebar.svelte  TaskItem.svelte  TaskList.svelte  TaskModal.svelte  ThemeSwitcher.svelte  Toast.svelte
frontend/src/lib/views/: Browse.svelte  Inbox.svelte  Project.svelte  Projects.svelte  Today.svelte  Upcoming.svelte
mcp/: toodue-mcp.mjs
scripts/: migrate-sqlite-to-postgres.py  probe-unified-auth.sh  prod-migrate-sqlite-to-postgres.sh
